--- a/.github/workflows/ci-cypress-action.yml
+++ b/.github/workflows/ci-cypress-action.yml
@@ -3,7 +3,7 @@ name: Cypress Tests
 on: [push]
 
 jobs:
-  cypress-run:
+  cypress-run-chrome:
     runs-on: ubuntu-latest
     container:
       image: cypress/browsers:node-20.13.1-chrome-125.0.6422.60-1-ff-126.0-edge-125.0.2535.51-1
