--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@babel/preset-env": "^7.4.3",
         "@babel/preset-react": "^7.0.0",
         "@faker-js/faker": "^8.4.1",
+        "@percy/cli": "^1.28.6",
+        "@percy/cypress": "^3.1.2",
         "allure-commandline": "^2.29.0",
         "allure-cypress": "^2.15.1",
         "babel-loader": "^8.0.5",
